--- a/client/src/containers/Home/components/Header/Header.less
+++ b/client/src/containers/Home/components/Header/Header.less
@@ -1,129 +1,69 @@
-// /* Icon */
-// * {
-//   position: relative;
-//   box-sizing: border-box;
-// }
-// .material-icons.grey-darken-4 { color: #212121; }
-// .material-icons.sm-18 { font-size: 18px; }
-// .material-icons.sm-24 { font-size: 24px; }
-// .material-icons.sm-36 { font-size: 36px; }
-// .material-icons.sm-48 { font-size: 48px; }
-// .material-icons.md-18 { font-size: 18px; }
-// .material-icons.md-24 { font-size: 24px; }
-// .material-icons.md-36 { font-size: 36px; }
-// .material-icons.md-48 { font-size: 48px; }
+* {
+  position: relative;
+  box-sizing: border-box;
+}
+.header {
+  z-index: 99;
+}
 
-// .header {
-//   position: fixed;
-//   left: 0;
-//   top: 0;
-//   z-index: 3;
-// }
+.fixed {
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.icon-grey-darken-4 {
+  color: #212121;
+}
 
-// .logo {
-//   font-family: 'Baumans', cursive;
-// }
+.posr-l-10{
+  position: relative;
+  left: 10px
+}
 
-// .brand-logo {
-//   margin-top: 16px;
-// }
+.posr-t-10{
+  position: relative;
+  top: 14px
+}
+// <-- for Img 比例 -->
+.brand-logo {
+  height: 100%;
+  // <-- 針對螢幕的寬 比例 -->
+  .imgBox{
+    width: 15%;
+  // <-- 推比例 -->
+    .imgBox-inner{
+      width: 152px;
+      padding-top: 60px;
+      .imgBox-fit {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        .image{
+          width: 100%;
+          display: block;
+          object-fit: cover;
+          object-position: center;
+          height: inherit;
+        }
+      }
+    }
+  }
+}
 
-// .imgbox {
-//   // border: 1px solid #000;
-//   width: 160px;
-//   overflow: hidden;
-//   position: relative;
-//   .image {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     width: 100%;
-//     height: 100%;
-//     max-width: 100%;
-//     max-height: 100%;
-//     background-color: rgba(0, 0, 0, 0);
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: center;
-
-//   }
-// }
-
-// .imgbox-inner {
-//   width: 100%;
-//   padding-top: 18%;
-//   height: 0;
-//   position: relative;
-// }
-// @media (max-width: 479px) {
-//   .nav-wrapper {
-//     display: flex;
-//     justify-content:space-around;
-//     align-items:flex-end;
-//   }
-//   .imgbox {
-//     width: 0;
-//   }
-//   .Search_2 {
-//     width: 0;
-//     height: 0;
-//     display: none;
-//     visibility: hidden;
-//     opacity: 0;
-//   }
-//   .formobile {
-//     width: 100%;
-//     height: 100%;
-//     opacity: 1;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-//   .imgbox-mobile {
-//     width: 160px;
-//   }
-//   .brand-logo {
-//     margin-top: 0px
-//   }
-// }
-// @media (min-width: 480px){
-//   .Search_1 {
-//     width: 0;
-//     height: 0;
-//     display: none;
-//     visibility: hidden;
-//     opacity: 0;
-//   }
-
-//   .formobile {
-//     width: 0;
-//     height: 0;
-//     display: none;
-//     visibility: hidden;
-//     opacity: 0;
-//   }
-// }
-
-// li > .greenline:after{
-//   display: block;
-// 	content: "";
-// 	position: absolute;
-// 	width: 0%;
-// 	height: 4px;
-// 	background-color: #29D272;
-// 	bottom: 0;
-// 	left: 50%;
-// 	transform: translateX(-50%);
-// 	transition: all 0.3s;
-// }
-// li > .greenline.current:after, li:hover > .greenline:after{
-// 	width: 100%;
-// }
-
-// // @media (min-width: 480px) and (max-width: 839px)
-
-// // @media (min-width: 840px)
-
-
-
+li > .item:after{
+  display: block;
+	content: "";
+	position: absolute;
+	width: 0%;
+	height: 4px;
+	background-color: #36D175;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	transition: all 0.3s;
+}
+li > .item.current:after, li:hover > .item:after{
+	width: 100%;
+}
